fixed a couple issues that overlapped

--- a/about/style-about.css
+++ b/about/style-about.css
@@ -119,7 +119,30 @@ h2, h3, h4, h5 {
     animation-name: fade;
     animation-duration: 1.5s;
 }
+ul{
+    list-style: none;   /* get rid of bullet */
+    display:flex;
+    background-color: black;
+    margin: 0;
+    padding: 10px 0px;
+}
 
+li a{
+    text-decoration: none; /* get rid of underline*/
+    padding: 10px 30px;
+    color: white;
+    transition: color 1s;
+}
+
+li a:hover{
+    background-color: darkslategrey;
+    color:gold;
+}
+
+li a:active{
+    background-color: white;
+    color: black;
+}
 @keyframes fade {
     from {opacity: .4}
     to {opacity: 1}
