--- a/contact/style-contact.css
+++ b/contact/style-contact.css
@@ -9,7 +9,7 @@
 
 body {
     color: #C3AB77;
-    background-color: #691221;
+    background-color: #1D0F14;
     font-family: "Quattrocento Sans", serif;
     margin: 0;
     padding: 20px;
@@ -60,8 +60,33 @@ a {
 
 a:hover {
     text-decoration: underline;
+
 }
 
+ul{
+    list-style: none;   /* get rid of bullet */
+    display:flex;
+    background-color: black;
+    margin: 0;
+    padding: 10px 0px;
+}
+
+li a{
+    text-decoration: none; /* get rid of underline*/
+    padding: 10px 30px;
+    color: white;
+    transition: color 1s;
+}
+
+li a:hover{
+    background-color: darkslategrey;
+    color:gold;
+}
+
+li a:active{
+    background-color: white;
+    color: black;
+}
 @media screen and (max-width: 600px) {
     h1 {
         font-size: 40pt;
